--- a/policies.html
+++ b/policies.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="How Stardust Gems handles user privacy and data collection." />
   <meta property="og:image" content="riddle12_logo.jpg" />
   <meta name="theme-color" content="#0e0e15" />
-  <link rel="canonical" href="https://riddle12.com/contact.html" />
+  <link rel="canonical" href="https://riddle12.com/policies.html" />
   <link rel="icon" href="riddle12_logo.jpg" type="image/jpeg" />
   <link rel="stylesheet" href="styles.css" />
 
