--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RIDDLE 12 — Indie Game Studio from Los Angeles</title>
-  <meta name="description" content="RIDDLE 12 is a family-run indie game studio in Los Angeles, founded by Cyril Zima (Kirill Petrov) and Maria Rogotskaya. We create unique mobile games inspired by cinema, focus, and precision." />
+  <meta name="description" content="RIDDLE 12 is a family-run indie game studio from Los Angeles, founded by Cyril Zima and Maria Rogotskaya. We create mobile games built with focus, balance, and precision." />
   <meta property="og:title" content="RIDDLE 12 — Indie Game Studio from Los Angeles" />
   <meta property="og:description" content="Discover Stardust Gems — a meditative gravity-based arcade game built with love and precision." />
   <meta property="og:image" content="riddle12_logo.jpg" />
