--- a/stardust_gems.html
+++ b/stardust_gems.html
@@ -10,17 +10,155 @@
   <meta name="robots" content="index, follow" />
   <meta property="og:title" content="Stardust Gems — Gravity Arcade by RIDDLE 12" />
   <meta property="og:description" content="Merge crystals, master gravity, and relax with Stardust Gems — a meditative indie game for iPhone." />
-  <meta property="og:image" content="https://devcy.neocities.org/game_poster.jpg" />
+  <meta property="og:image" content="https://riddle12.com/game_poster.jpg" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://devcy.neocities.org/stardust_gems.html" />
+  <meta property="og:url" content="https://riddle12.com/stardust_gems.html" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Stardust Gems — Gravity Arcade by RIDDLE 12" />
   <meta name="twitter:description" content="Merge crystals and master gravity in this relaxing physics-based puzzle from RIDDLE 12." />
-  <meta name="twitter:image" content="https://devcy.neocities.org/game_poster.jpg" />
+  <meta name="twitter:image" content="https://riddle12.com/game_poster.jpg" />
   <meta name="theme-color" content="#0e0e15" />
   <link rel="icon" href="riddle12_logo.jpg" type="image/jpeg" />
   <link rel="canonical" href="https://riddle12.com/stardust_gems.html" />
   <link rel="stylesheet" href="styles.css" />
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #0e0e15;
+      color: #eaeaea;
+      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, sans-serif;
+      text-align: center;
+      overflow-x: hidden;
+    }
+
+    .nav-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0.8em 1.2em;
+    }
+
+    .logo-glow {
+      height: 48px;
+      transition: transform 0.3s;
+    }
+
+    .logo-glow:hover {
+      transform: scale(1.05);
+    }
+
+    .nav-menu {
+      display: flex;
+      gap: 1.2em;
+    }
+
+    .nav-link {
+      color: #eaeaea;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.2s;
+    }
+
+    .nav-link:hover,
+    .nav-link.active {
+      color: #66c5ff;
+    }
+
+    .menu-toggle {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 1.8em;
+      color: #eaeaea;
+      cursor: pointer;
+    }
+
+    @media (max-width: 720px) {
+      .menu-toggle {
+        display: block;
+      }
+      .nav-menu {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 65px;
+        right: 20px;
+        background: rgba(15,15,25,0.95);
+        backdrop-filter: blur(8px);
+        border-radius: 12px;
+        padding: 1em 1.2em;
+        max-width: 180px;
+        text-align: right;
+        animation: slideInLink 0.3s ease;
+      }
+      .nav-menu.open {
+        display: flex;
+      }
+    }
+
+    .container.main-content {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2em 1.2em;
+    }
+
+    .card {
+      background: rgba(255,255,255,0.03);
+      border-radius: 12px;
+      padding: 2em 1.5em;
+      margin-bottom: 3em;
+      box-shadow: 0 0 12px rgba(255,255,255,0.05);
+    }
+
+    .game-poster {
+      width: 100%;
+      height: auto;
+      max-width: 780px;
+      border-radius: 12px;
+      margin: 1em auto;
+      display: block;
+    }
+
+    .divider {
+      margin: 2.5em auto;
+      opacity: 0.4;
+    }
+
+    .footer {
+      background: rgba(255,255,255,0.03);
+      text-align: center;
+      padding: 1.5em 1em;
+      border-top: 1px solid rgba(255,255,255,0.1);
+      margin-top: 3em;
+    }
+
+    .footer-links {
+      margin-top: 0.5em;
+      color: #aaa;
+    }
+
+    .footer-link {
+      color: #aaa;
+      text-decoration: none;
+      margin: 0 0.3em;
+    }
+
+    .footer-link:hover {
+      color: #66c5ff;
+    }
+
+    @keyframes slideInLink {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .fade-in { opacity: 0; transition: opacity 1s ease; }
+    .fade-in.visible { opacity: 1; }
+  </style>
 </head>
 
 <body>
@@ -29,9 +167,7 @@
     <a href="index.html" class="brand" aria-label="RIDDLE 12 Home">
       <img src="riddle12_logo.jpg" alt="RIDDLE 12 Logo" class="logo-glow" />
     </a>
-
     <button class="menu-toggle" aria-label="Open menu">☰</button>
-
     <nav class="nav-menu">
       <a href="index.html" class="nav-link" data-page="about">About</a>
       <a href="stardust_gems.html" class="nav-link active" data-page="stardust">Stardust Gems</a>
@@ -42,9 +178,9 @@
 </header>
 
 <main class="container main-content">
+  <!-- контент оставлен без изменений -->
   <section class="card fade-in">
-    <h1>Stardust Gems</h1>
-    <p class="subtitle">A meditative gravity-based arcade experience by RIDDLE 12</p>
+    <h1>Stardust Gems: A meditative gravity-based arcade experience by RIDDLE 12</h1>
     <img src="game_poster.jpg" alt="Stardust Gems poster showing glowing crystals" class="game-poster" loading="eager" />
 
     <p style="text-align:center; max-width:800px; margin:0 auto 1em;">
@@ -92,7 +228,7 @@
   <section class="card fade-in">
     <h2>Behind the Design</h2>
     <p style="text-align:center; max-width:800px; margin:0 auto;">
-      When we started building <strong>Stardust Gems</strong>, our goal was to design a <em>gravity arcade game</em> that felt as natural and elegant as watching stardust fall through space. Every movement in the game is calculated with physics inspired by real-world motion, but tuned for playability and comfort. The challenge was to make the experience feel alive, not mechanical.
+      When we started building Stardust Gems, our goal was to design a <em>gravity arcade game</em> that felt as natural and elegant as watching stardust fall through space. Every movement in the game is calculated with physics inspired by real-world motion, but tuned for playability and comfort. The challenge was to make the experience feel alive, not mechanical.
     </p>
     <p style="text-align:center; max-width:800px; margin:0 auto;">
       We experimented with different types of crystal behavior — friction, rotation, and bounce intensity — until the gameplay felt both intuitive and hypnotic. The result was a system where each crystal has its own weight and surface reaction, turning every merge into a satisfying micro-event. It’s not about racing or scoring high; it’s about finding rhythm and flow.
@@ -101,7 +237,7 @@
       One of the key design decisions was to use the phone’s gyroscope for natural control. Instead of pressing buttons, the player tilts the device to change gravity. This creates a physical connection between the player’s movement and the in-game world — a concept we call <strong>“embodied gameplay.”</strong>
     </p>
     <p style="text-align:center; max-width:800px; margin:0 auto;">
-      Visually, <strong>Stardust Gems</strong> follows the aesthetic language of minimalism and light. The glowing crystals represent fragments of focus drifting through a quiet universe. Combined with subtle ambient sound, the game aims to lower tension, slow down the mind, and invite creative attention.
+      Visually, Stardust Gems follows the aesthetic language of minimalism and light. The glowing crystals represent fragments of focus drifting through a quiet universe. Combined with subtle ambient sound, the game aims to lower tension, slow down the mind, and invite creative attention.
     </p>
     <p style="text-align:center; max-width:800px; margin:0 auto;">
       At <strong>RIDDLE 12</strong>, we believe that modern games can be meditative and expressive at once. <strong>Stardust Gems</strong> is a reflection of that philosophy — a small world of motion, silence, and clarity in your pocket.
@@ -113,11 +249,11 @@
   <section class="card fade-in">
     <h2>FAQ</h2>
     <h3>Is Stardust Gems free?</h3>
-    <p style="text-align:center; max-width:800px; margin:0 auto;">Yes, it’s free to play with optional future expansions.</p>
+    <p>Yes, it’s free to play with optional future expansions.</p>
     <h3>Do I need internet?</h3>
-    <p style="text-align:center; max-width:800px; margin:0 auto;">No. The game works offline and saves progress locally.</p>
+    <p>No. The game works offline and saves progress locally.</p>
     <h3>Who made it?</h3>
-    <p style="text-align:center; max-width:800px; margin:0 auto;">Created by <strong>RIDDLE 12</strong> — a small independent studio from Los Angeles focused on creative and meditative gameplay.</p>
+    <p>Created by <strong>RIDDLE 12</strong> — a small independent studio from Los Angeles focused on creative and meditative gameplay.</p>
   </section>
 
   <section class="promo fade-in" style="text-align:center;">
@@ -164,6 +300,5 @@ document.addEventListener("DOMContentLoaded", () => {
   fadeEls.forEach(el => observer.observe(el));
 });
 </script>
-
 </body>
 </html>
