--- a/stardust_gems.html
+++ b/stardust_gems.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Merge crystals, master gravity, and relax with Stardust Gems — a meditative indie game for iPhone." />
   <meta property="og:image" content="riddle12_logo.jpg" />
   <meta name="theme-color" content="#0e0e15" />
-  <link rel="canonical" href="https://riddle12.com/stardust_gems.html" />
+  <link rel="canonical" href="https://riddle12.com/stardust_gems" />
   <link rel="icon" href="riddle12_logo.jpg" type="image/jpeg" />
   <link rel="stylesheet" href="styles.css" />
 
@@ -70,7 +70,7 @@
 
 <main class="container main-content">
   <section class="card fade-in">
-    <h1>Stardust Gems: A meditative gravity-based arcade experience by RIDDLE 12</h1>
+    <h1>Stardust Gems — Gravity Arcade Game by RIDDLE 12</h1>
     <img src="game_poster.jpg" alt="Stardust Gems poster showing glowing crystals" class="game-poster" loading="eager" />
 
     <p style="text-align:center; max-width:800px; margin:0 auto 1em;">
