--- a/stardust_gems.html
+++ b/stardust_gems.html
@@ -147,7 +147,7 @@
   </section>
 
   <section class="promo fade-in" style="text-align:center;">
-    <a href="https://apps.apple.com/" target="_blank" rel="noopener" class="btn-store">Download on the App Store</a>
+    <a href="https://apps.apple.com/us/app/stardust-gems-gravity-merge/id6755162746" target="_blank" rel="noopener" class="btn-store">Download on the App Store</a>
   </section>
 </main>
 
