--- a/policies.html
+++ b/policies.html
@@ -94,7 +94,7 @@
 <main class="container main-content fade-in">
   <section class="card fade-in">
     <h1>Privacy Policy for Stardust Gems</h1>
-    <p class="subtitle">Effective Date: October 13, 2025</p>
+    <p class="subtitle">Effective Date: November 24, 2025</p>
 
     <h2>1. Introduction</h2>
     <p>This Privacy Policy explains how <strong>Kirill Petrov</strong> (“I”, “me”, or “my”) handles user information in the mobile game <strong>Stardust Gems</strong> (“the App”).  
@@ -102,10 +102,13 @@
 
     <div class="divider">⸻</div>
 
-    <h2>2. Information I Do Not Collect</h2>
-    <p>I do not collect, store, or share any personal information from users.  
-    The App does not require registration, login, or any form of personal data entry.  
-    I do not collect your name, address, email, phone number, location, photos, or any other identifying information.</p>
+   <h2>2. Personal Information</h2>
+<p>I do not collect, store, or share any <strong>Personally Identifiable Information (PII)</strong> from users.
+The App does not require registration, login, or any form of personal data entry.
+I do not collect your name, address, email, phone number, location, or photos.</p>
+
+<p><em>Note: While I do not collect PII, third-party services may collect device identifiers as described in Section 3.</em></p>
+
 
     <div class="divider">⸻</div>
 
