--- a/policies.html
+++ b/policies.html
@@ -112,16 +112,27 @@ I do not collect your name, address, email, phone number, location, or photos.</
 
     <div class="divider">⸻</div>
 
-    <h2>3. Third-Party Services</h2>
-    <p>The App uses limited third-party services that may collect certain technical data automatically.  
-    These services operate under their own privacy policies:</p>
-    <ul>
-      <li><strong>Google AdMob</strong> – displays in-game advertisements and may collect non-personal information such as device type, approximate location, and advertising identifiers. <br>
-      <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a></li>
-      <li><strong>Apple Game Center</strong> – provides achievements and leaderboards. <br>
-      <a href="https://www.apple.com/legal/privacy/" target="_blank">Apple Privacy Policy</a></li>
-    </ul>
-    <p>I do not have access to any personal data collected by these services.</p>
+    <h2>3. Third-Party Services & Data Collection</h2>
+
+<p>The App uses third-party services that may collect certain information for advertising, analytics, and performance measurement purposes. This may include device identifiers and data related to in-app activity such as game progress and purchases.</p>
+
+<p>These third-party services operate under their own privacy policies:</p>
+
+<ul>
+  <li><strong>Google AdMob</strong> – Used to display advertisements and measure ad performance.<br>
+  <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google Privacy Policy</a></li>
+
+  <li><strong>Apple Game Center</strong> – Used to provide achievements and leaderboards.<br>
+  <a href="https://www.apple.com/legal/privacy/" target="_blank" rel="noopener">Apple Privacy Policy</a></li>
+
+  <li><strong>Meta (Facebook) SDK</strong> – Used for advertising analytics and attribution.<br>
+  <a href="https://www.facebook.com/privacy/policy/" target="_blank" rel="noopener">Meta Privacy Policy</a></li>
+
+  <li><strong>TikTok Business SDK</strong> – Used to measure advertising performance.<br>
+  <a href="https://ads.tiktok.com/i18n/official/policy/privacy" target="_blank" rel="noopener">TikTok Privacy Policy</a></li>
+</ul>
+
+<p>If you grant permission via the <strong>App Tracking Transparency (ATT)</strong> prompt, some of these services may use your device identifier to provide personalized advertising and measure ad effectiveness. You can change or withdraw this permission at any time in your iOS system settings.</p>
 
     <div class="divider">⸻</div>
 
