--- a/policies.html
+++ b/policies.html
@@ -40,7 +40,7 @@
     }
 
     .card h1, .card h2 {
-      color: #ffd75f; /* 🔹 ЖЁЛТЫЙ как на главной */
+      color: #ffd75f;
       margin-top: 1rem;
       margin-bottom: 0.8rem;
     }
@@ -83,10 +83,10 @@
     <button class="menu-toggle" aria-label="Open menu">☰</button>
 
     <nav class="nav-menu">
-      <a href="index.html" class="nav-link" data-page="about">About</a>
-      <a href="stardust_gems.html" class="nav-link" data-page="stardust">Stardust Gems</a>
-      <a href="policies.html" class="nav-link active" data-page="policies">Policy</a>
-      <a href="contact.html" class="nav-link" data-page="contact">Contact Us</a>
+      <a href="index.html" class="nav-link">About</a>
+      <a href="stardust_gems.html" class="nav-link">Stardust Gems</a>
+      <a href="policies.html" class="nav-link active">Policy</a>
+      <a href="contact.html" class="nav-link">Contact Us</a>
     </nav>
   </div>
 </header>
@@ -98,52 +98,51 @@
 
     <h2>1. Introduction</h2>
     <p>This Privacy Policy explains how <strong>Kirill Petrov</strong> (“I”, “me”, or “my”) handles user information in the mobile game <strong>Stardust Gems</strong> (“the App”).  
-    I respect your privacy and am committed to being transparent about what information is — and is not — collected.</p>
+    I respect your privacy and am committed to being transparent about how information is handled.</p>
 
     <div class="divider">⸻</div>
 
-   <h2>2. Personal Information</h2>
-<p>I do not collect, store, or share any <strong>Personally Identifiable Information (PII)</strong> from users.
-The App does not require registration, login, or any form of personal data entry.
-I do not collect your name, address, email, phone number, location, or photos.</p>
-
-<p><em>Note: While I do not collect PII, third-party services may collect device identifiers as described in Section 3.</em></p>
-
+    <h2>2. Personal Information</h2>
+    <p>The App itself does not require users to provide direct personal information such as name, address, email, phone number, photos, or account registration.  
+    However, certain technical and usage data may be collected automatically through third-party services as described in Section 3 of this Policy.</p>
 
     <div class="divider">⸻</div>
 
     <h2>3. Third-Party Services & Data Collection</h2>
 
-<p>The App uses third-party services that may collect certain information for advertising, analytics, and performance measurement purposes. This may include device identifiers and data related to in-app activity such as game progress and purchases.</p>
+    <p>The App uses third-party services that may collect certain information for advertising, analytics, and performance measurement purposes. This may include device identifiers and data related to in-app activity such as game progress and purchases.</p>
 
-<p>These third-party services operate under their own privacy policies:</p>
+    <p>These third-party services operate under their own privacy policies:</p>
 
-<ul>
-  <li><strong>Google AdMob</strong> – Used to display advertisements and measure ad performance.<br>
-  <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google Privacy Policy</a></li>
+    <ul>
+      <li><strong>Google AdMob</strong> – Used to display advertisements and measure ad performance.<br>
+      <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google Privacy Policy</a></li>
 
-  <li><strong>Apple Game Center</strong> – Used to provide achievements and leaderboards.<br>
-  <a href="https://www.apple.com/legal/privacy/" target="_blank" rel="noopener">Apple Privacy Policy</a></li>
+      <li><strong>Apple Game Center</strong> – Used to provide achievements and leaderboards.<br>
+      <a href="https://www.apple.com/legal/privacy/" target="_blank" rel="noopener">Apple Privacy Policy</a></li>
 
-  <li><strong>Meta (Facebook) SDK</strong> – Used for advertising analytics and attribution.<br>
-  <a href="https://www.facebook.com/privacy/policy/" target="_blank" rel="noopener">Meta Privacy Policy</a></li>
+      <li><strong>Meta (Facebook) SDK</strong> – Used for advertising analytics and attribution.<br>
+      <a href="https://www.facebook.com/privacy/policy/" target="_blank" rel="noopener">Meta Privacy Policy</a></li>
 
-  <li><strong>TikTok Business SDK</strong> – Used to measure advertising performance.<br>
-  <a href="https://ads.tiktok.com/i18n/official/policy/privacy" target="_blank" rel="noopener">TikTok Privacy Policy</a></li>
-</ul>
+      <li><strong>TikTok Business SDK</strong> – Used to measure advertising performance.<br>
+      <a href="https://ads.tiktok.com/i18n/official/policy/privacy" target="_blank" rel="noopener">TikTok Privacy Policy</a></li>
+    </ul>
 
-<p>If you grant permission via the <strong>App Tracking Transparency (ATT)</strong> prompt, some of these services may use your device identifier to provide personalized advertising and measure ad effectiveness. You can change or withdraw this permission at any time in your iOS system settings.</p>
+    <p>If you grant permission via the <strong>App Tracking Transparency (ATT)</strong> prompt, some of these services may use your device identifier to provide personalized advertising and measure ad effectiveness.  
+    You can change or withdraw this permission at any time in your iOS system settings.</p>
 
     <div class="divider">⸻</div>
 
     <h2>4. Children’s Privacy</h2>
-    <p>This App is not directed toward children under 13 and does not knowingly collect or request any personal information from users of any age.</p>
+    <p>The App is suitable for a general audience, including children. The App itself does not require users to provide any personal information.</p>
+    <p>Personalized advertising is only used with the user’s permission via Apple’s App Tracking Transparency (ATT) framework. If permission is not granted, only non-personalized ads may be shown.</p>
+    <p>Some third-party services used in the App may collect limited device or usage data as described in Section 3, in accordance with their own privacy policies.</p>
+    <p>If a parent or guardian believes that a child has provided personal data through third-party services used by the App, they may contact me using the information below.</p>
 
     <div class="divider">⸻</div>
 
     <h2>5. Data Security</h2>
-    <p>Because the App itself does not collect or store personal data, no user information is retained on my side.  
-    Any data handled by third-party partners is protected according to their own security standards.</p>
+    <p>The App does not directly store personal data on its own servers. Any data processed by third-party partners is protected according to their own security standards and privacy policies.</p>
 
     <div class="divider">⸻</div>
 
@@ -160,7 +159,14 @@ I do not collect your name, address, email, phone number, location, or photos.</
 
     <div class="divider">⸻</div>
 
-    <h2>8. Contact</h2>
+    <h2>8. Your Privacy Rights</h2>
+    <p>Depending on your location, you may have rights to access, correct, delete, or restrict the processing of your personal data.  
+    You may also withdraw consent for personalized advertising at any time through your iOS device settings.</p>
+    <p>For any privacy-related requests, including questions about data access or deletion, you may contact me using the information below.</p>
+
+    <div class="divider">⸻</div>
+
+    <h2>9. Contact</h2>
     <p>For privacy-related questions, please contact:</p>
     <p><strong>Kirill Petrov</strong><br>
     RIDDLE 12 Studio<br>
