--- a/policies.html
+++ b/policies.html
@@ -134,7 +134,7 @@
     <div class="divider">⸻</div>
 
     <h2>4. Children’s Privacy</h2>
-    <p>The App is suitable for a general audience, including children. The App itself does not require users to provide any personal information.</p>
+    <p>The App is suitable for a general audience. The App itself does not require users to provide any personal information.</p>
     <p>Personalized advertising is only used with the user’s permission via Apple’s App Tracking Transparency (ATT) framework. If permission is not granted, only non-personalized ads may be shown.</p>
     <p>Some third-party services used in the App may collect limited device or usage data as described in Section 3, in accordance with their own privacy policies.</p>
 
