--- a/policies.html
+++ b/policies.html
@@ -102,36 +102,39 @@
 
     <div class="divider">⸻</div>
 
-    <h2>2. Personal Information</h2>
-    <p>The App itself does not require users to provide direct personal information such as name, address, email, phone number, photos, or account registration.  
-    However, certain technical and usage data may be collected automatically through third-party services as described in Section 3 of this Policy.</p>
+<h2>2. Personal Information</h2>
+<p>The App itself does not require users to provide direct personal information such as name, address, email, phone number, photos, or account registration.  
+However, certain technical and usage data may be collected automatically through third-party services as described in Section 3 of this Policy.</p>
 
-    <div class="divider">⸻</div>
+<div class="divider">⸻</div>
 
-    <h2>3. Third-Party Services & Data Collection</h2>
+<h2>3. Third-Party Services & Data Collection</h2>
 
-    <p>The App uses third-party services that may collect certain information for advertising, analytics, and performance measurement purposes. This may include device identifiers and data related to in-app activity such as game progress and purchases.</p>
+<p>The App uses third-party services that may collect certain information for advertising, analytics, and performance measurement purposes. This may include device identifiers and data related to in-app activity such as game progress and purchases.</p>
 
-    <p>These third-party services operate under their own privacy policies:</p>
+<p>These third-party services operate under their own privacy policies:</p>
 
-    <ul>
-      <li><strong>Google AdMob</strong> – Used to display advertisements and measure ad performance.<br>
-      <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google Privacy Policy</a></li>
+<ul>
+  <li><strong>Google AdMob</strong> – Used to display advertisements and measure ad performance.<br>
+  <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google Privacy Policy</a></li>
 
-      <li><strong>Apple Game Center</strong> – Used to provide achievements and leaderboards.<br>
-      <a href="https://www.apple.com/legal/privacy/" target="_blank" rel="noopener">Apple Privacy Policy</a></li>
+  <li><strong>Apple Game Center</strong> – Used to provide achievements and leaderboards.<br>
+  <a href="https://www.apple.com/legal/privacy/" target="_blank" rel="noopener">Apple Privacy Policy</a></li>
 
-      <li><strong>Meta (Facebook) SDK</strong> – Used for advertising analytics and attribution.<br>
-      <a href="https://www.facebook.com/privacy/policy/" target="_blank" rel="noopener">Meta Privacy Policy</a></li>
+  <li><strong>Meta (Facebook) SDK</strong> – Used for advertising analytics and attribution.<br>
+  <a href="https://www.facebook.com/privacy/policy/" target="_blank" rel="noopener">Meta Privacy Policy</a></li>
 
-      <li><strong>TikTok Business SDK</strong> – Used to measure advertising performance.<br>
-      <a href="https://ads.tiktok.com/i18n/official/policy/privacy" target="_blank" rel="noopener">TikTok Privacy Policy</a></li>
-    </ul>
+  <li><strong>TikTok Business SDK</strong> – Used to measure advertising performance.<br>
+  <a href="https://ads.tiktok.com/i18n/official/policy/privacy" target="_blank" rel="noopener">TikTok Privacy Policy</a></li>
 
-    <p>If you grant permission via the <strong>App Tracking Transparency (ATT)</strong> prompt, some of these services may use your device identifier to provide personalized advertising and measure ad effectiveness.  
-    You can change or withdraw this permission at any time in your iOS system settings.</p>
+  <li><strong>Firebase (Google Analytics & Crash Reporting)</strong> – Used to collect anonymized analytics data and crash reports to improve app stability and performance.<br>
+  <a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener">Firebase Privacy Policy</a></li>
+</ul>
 
-    <div class="divider">⸻</div>
+<p>If you grant permission via the <strong>App Tracking Transparency (ATT)</strong> prompt, some of these services may use your device identifier to provide personalized advertising and measure ad effectiveness.  
+You can change or withdraw this permission at any time in your iOS system settings.</p>
+
+<div class="divider">⸻</div>
 
     <h2>4. Children’s Privacy</h2>
     <p>The App is suitable for a general audience. The App itself does not require users to provide any personal information.</p>
