--- a/policies.html
+++ b/policies.html
@@ -91,7 +91,7 @@
   </div>
 </header>
 
-<main class="container main-content fade-in">
+<main class="container main-content">
   <section class="card fade-in">
     <h1>Privacy Policy for Stardust Gems</h1>
     <p class="subtitle">Effective Date: December 4, 2025</p>
