--- a/policies.html
+++ b/policies.html
@@ -210,9 +210,10 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 
   const fadeEls = document.querySelectorAll(".fade-in, .card");
+  const fadeEls = document.querySelectorAll('.fade-in, .card');
   const observer = new IntersectionObserver(entries => {
-    entries.forEach(e => { if (e.isIntersecting) e.target.classList.add("visible"); });
-  }, { threshold: 0.15 });
+    entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible'); });
+  }, {threshold: 0.15});
   fadeEls.forEach(el => observer.observe(el));
 });
 </script>
